# tolk

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml  mingw-w64-x64.yml
docs/: README.md
examples/c/: ConsoleApp.c
examples/c++/: ConsoleApp.cpp
libs/: README.md
src/: Makefile  ScreenReaderDriver.h  ScreenReaderDriverZDSR.cpp  ScreenReaderDriverZDSR.h  Tolk.cpp  Tolk.h  Tolk.rc
src/dotnet/: TolkDotNet.rc
